<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:elevation="0dp"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <com.google.android.material.appbar.MaterialToolbar
            app:title="About"
            app:titleCentered="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="#B4E4F9"
        app:cardCornerRadius="25dp"
        app:strokeWidth="0dp"
        android:layout_margin="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/logoquiz"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"/>
            <TextView
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/appVersionTextView"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:text="@string/app_version_v1_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/developerCard"
        app:cardBackgroundColor="#B4E4F9"
        app:cardCornerRadius="25dp"
        app:strokeWidth="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:text="@string/developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:text="@string/amadi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/darkMode"
        app:cardBackgroundColor="#B4E4F9"
        app:cardCornerRadius="25dp"
        app:strokeWidth="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:text="@string/embark_on_an_enlightening_journey_through_time_with_our_history_quiz_game_delve_into_the_depths_of_the_past_as_you_test_your_knowledge_across_various_epochs_civilizations_and_pivotal_moments_in_human_history_are_you_ready_to_become_a_master_of_the_past_play_now_and_let_the_adventure_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"/>

            <!-- Add a switch or button for toggling dark mode -->
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
